[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/Balloons/0.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Tile.gd" type="Script" id=2]

[node name="Tile" type="CanvasLayer"]
layer = 0

[node name="Texture" type="TextureRect" parent="."]
show_behind_parent = true
mouse_filter = 0
texture = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Texture"]
modulate = Color( 0.784314, 0, 0, 1 )
anchor_left = -2.10757e-08
anchor_top = -0.0055687
anchor_right = -2.10757e-08
anchor_bottom = -0.0055687
margin_left = 49.3889
margin_top = 20.1588
margin_right = 57.3889
margin_bottom = 34.1588
rect_scale = Vector2( 10, 10 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="Texture" to="Texture" method="_on_Texture_gui_input"]
[connection signal="mouse_entered" from="Texture" to="Texture" method="_on_Texture_mouse_entered"]
[connection signal="mouse_exited" from="Texture" to="Texture" method="_on_Texture_mouse_exited"]
